corrección de link a imagenes y preparación de modulos node.js

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
         <!-- inicio de tarjeta -->
         <div class="img-card">
             <img class="img-muestra"
-                src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.webp"
+                src="resources/images/portfolio/revista_chicos/1.webp"
                 alt="Revista chicos">
             <button type="button" class="descripcion" data-bs-toggle="modal" data-bs-target="#revista-chicos">
                 Revista "CHicos"
@@ -158,7 +158,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
-                                            src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.webp"
+                                            src="resources/images/portfolio/revista_chicos/1.webp"
                                             alt=""></div>
                                 </div>
                                 <div class="row">
@@ -532,7 +532,7 @@
         <!-- inicio de tarjeta -->
         <div class="img-card">
             <img class="img-muestra"
-                src="resources/images/portfolio/panuelo_amantes_mariposa/Sitio Web 22 06 IMG 1 Inicio 2 Galería 2.webp"
+                src="resources/images/portfolio/panuelo_amantes_mariposa/1.webp"
                 alt="amantes mariposa">
             <button type="button" class="descripcion" data-bs-toggle="modal" data-bs-target="#amantes-mariposa">
                 "Amantes Mariposa"
@@ -550,7 +550,7 @@
                             <div class="container-fluid">
                                 <div class="row d.flex flex-column-reverse flex-md-row">
                                     <div class="col-12 col-md-6 modal-structure-image">
-                                        <img src="resources/images/portfolio/panuelo_amantes_mariposa/Sitio Web 22 06 IMG 1 Inicio 2 Galería 2.webp"
+                                        <img src="resources/images/portfolio/panuelo_amantes_mariposa/1.webp"
                                             alt="amantes mariposa">
                                     </div>
                                     <div class="col-12 col-md-6 modal-structure-text">
@@ -787,7 +787,7 @@
 
         <!-- inicio de tarjeta -->
         <div class="img-card">
-            <img class="img-muestra" src="resources/images/portfolio/soppelsa/FDÑO Sopelsa - Color 1.webp"
+            <img class="img-muestra" src="resources/images/portfolio/soppelsa/1.webp"
                 alt="cuorelato">
             <button type="button" class="descripcion" data-bs-toggle="modal" data-bs-target="#cuorelato">
                 Cuorelato de Soppelsa
@@ -805,7 +805,7 @@
                             <div class="container-fluid">
                                 <div class="row d.flex flex-column-reverse flex-md-row">
                                     <div class="col-12 col-md-6 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa/FDÑO Sopelsa - Color 1.webp"
+                                            src="resources/images/portfolio/soppelsa/1.webp"
                                             alt="soppelsa">
                                     </div>
                                     <div class="col-12 col-md-6 modal-structure-text">
@@ -821,13 +821,13 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa/FDÑO Sopelsa - Color 2.webp"
+                                            src="resources/images/portfolio/soppelsa/2.webp"
                                             alt="">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa/Sitio Web 22 06 IMG 1 Inicio 2 Galería 6.webp"
+                                            src="resources/images/portfolio/soppelsa/3.webp"
                                             alt="">
                                     </div>
                                 </div>
@@ -852,7 +852,7 @@
         <!-- inicio de tarjeta -->
         <div class="img-card">
             <img class="img-muestra"
-                src="resources/images/portfolio/soppelsa-dos/FDÑO 21 12 Soppelsa NAVIDAD 300dpi Color NATALETAS v5 con pinitos.webp"
+                src="resources/images/portfolio/soppelsa-dos/3.webp"
                 alt="navidad-soppelsa">
             <button type="button" class="descripcion" data-bs-toggle="modal" data-bs-target="#navidad-soppelsa">
                 Campaña de navidad para Ferruccio Soppelsa
@@ -870,7 +870,7 @@
                             <div class="container-fluid">
                                 <div class="row d.flex flex-column-reverse flex-md-row">
                                     <div class="col-12 col-md-6 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa-dos/FDÑO 21 12 Soppelsa NAVIDAD 300dpi Color NATALETAS v5 con pinitos.webp"
+                                            src="resources/images/portfolio/soppelsa-dos/3.webp"
                                             alt="navidad-soppelsa">
                                     </div>
                                     <div class="col-12 col-md-6 modal-structure-text">
@@ -887,13 +887,13 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa-dos/FDÑO 21 12 Soppelsa NAVIDAD 300dpi Color Cuorelato v4.webp"
+                                            src="resources/images/portfolio/soppelsa-dos/2.webp"
                                             alt="">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 modal-structure-image"><img
-                                            src="resources/images/portfolio/soppelsa-dos/269723866_1262139384290.webp"
+                                            src="resources/images/portfolio/soppelsa-dos/1.webp"
                                             alt="">
                                     </div>
                                 </div>
