--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="resources/images/portfolio/revista_chicos/RCHicos16 Tapa - Color Portada JPG.webp"
+            <img src="resources/images/portfolio/revista_chicos/1.webp"
               class="d-block w-100" alt="revista chicos 16">
 
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="resources/images/portfolio/soppelsa/Sitio Web 22 06 IMG 1 Inicio 2 Galería 6.webp"
+            <img src="resources/images/portfolio/soppelsa/1.webp"
               class="d-block w-100" alt="soppelsa">
           </div>
         </div>
@@ -220,7 +220,7 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.webp"
+      <img src="resources/images/portfolio/revista_chicos/1.webp"
         class="card-img-top" alt="Revista chicos">
       <div class="card-body">
         <h5 class="card-title">Portada de Revista chicos</h5>
@@ -283,7 +283,7 @@
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno - corrección png.webp"
+                        src="resources/images/portfolio/revista_chicos/1.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
