mejoras de performance y tratamiento de imagenes

--- a/about-me.html
+++ b/about-me.html
@@ -16,7 +16,7 @@
     <!-- Información Meta -->
     <meta name="Description"
         content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0">
     <meta name="keywords"
         content="diseño gráfico, ilustración, presentacion, amor, comienzos, arte gráfico, arte, magia, tableta gráfica, creatividad, imágenes, inspiración, comisiones, tienda, vida, cute, estudios, adorable">
 
