--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0">
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
   <!-- Información Meta -->
   <meta name="Description"
     content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
-  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0">
   <meta name="keywords"
     content="diseño gráfico, ilustración, fanarts, arte digital, Freelance, arte gráfico, digitalización, tableta gráfica, mockups, imágenes, ventas, comisiones, tienda, blog, cute, kawaii, adorable, inspiración">
 
@@ -115,7 +115,7 @@
               alt="lulu martins">
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="resources/images/portfolio/six_fanarts/Six Fanarts 6B.webp" class="d-block w-100"
+            <img src="resources/images/portfolio/six_fanarts/7.webp" class="d-block w-100"
               alt="six fanarts">
 
           </div>
@@ -165,7 +165,7 @@
   <!-- comienzo de tarjetas -->
   <div class="content-three-grid-index">
     <div class="card" style="width: 18rem;">
-      <img src="resources/images/portfolio/san_valentin_espacial/sanvalentin2020 IG2.webp" class="card-img-top"
+      <img src="resources/images/portfolio/san_valentin_espacial/1.webp" class="card-img-top"
         alt="san valentin">
       <div class="card-body">
         <h5 class="card-title">San Valentín espacial</h5>
@@ -186,7 +186,7 @@
                 <div class="container-fluid">
                   <div class="row d.flex flex-column-reverse flex-md-row">
                     <div class="col-12 col-md-6 modal-structure-image"><img
-                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2019 BG2.webp" alt=""></div>
+                        src="resources/images/portfolio/san_valentin_espacial/1.webp" alt=""></div>
                     <div class="col-12 col-md-6 modal-structure-text">
                       <h3>San Valentín espacial</h3>
                       <article>A partir de una ilustración de regalo de san valentin que hice para Robb, mi pareja, se
@@ -196,15 +196,15 @@
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2019 BG1.webp" alt=""></div>
+                        src="resources/images/portfolio/san_valentin_espacial/2.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/san_valentin_espacial/sanvalentin2020 IG2.webp" alt=""></div>
+                        src="resources/images/portfolio/san_valentin_espacial/3.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/san_valentin_espacial/Sitio Web 22 06 IMG 1 Inicio 2 Galería 5.webp"
+                        src="resources/images/portfolio/san_valentin_espacial/4.webp"
                         alt=""></div>
                   </div>
                 </div>
@@ -242,7 +242,7 @@
                 <div class="container-fluid">
                   <div class="row d.flex flex-column-reverse flex-md-row">
                     <div class="col-12 col-md-6 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01569.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/1.webp" alt=""></div>
                     <div class="col-12 col-md-6 modal-structure-text">
                       <h3>Revista "CHicos de Ciencia Hoy"</h3>
                       <article>Serie de portadas, contratapas y notas realizadas para la Revista
@@ -263,78 +263,78 @@
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01570.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/2.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01584.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/3.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01601.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/4.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01603.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/5.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/DSC01609.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/5b.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/1.webp"
+                        src="resources/images/portfolio/revista_chicos/6.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno 2 - corrección png.webp"
+                        src="resources/images/portfolio/revista_chicos/7.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Nitrógeno 3 - corrección png.webp"
+                        src="resources/images/portfolio/revista_chicos/8.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Rabia CHicos - doble página corrección png.webp"
+                        src="resources/images/portfolio/revista_chicos/9.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Rabia CHicos - doble página ejemplo.webp"
+                        src="resources/images/portfolio/revista_chicos/10.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Ilustración Tecnologías del futuro jpg v2.webp"
+                        src="resources/images/portfolio/revista_chicos/11.webp"
                         alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/RCHicos12.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/13.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/RCHicos13.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/14.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/RCHicos16 Tapa - Color Portada JPG.webp" alt="">
+                        src="resources/images/portfolio/revista_chicos/15.webp" alt="">
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/RCHicos17 Contraportada JPG.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/16.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/RCHicos18 Contratapa JPG.webp" alt=""></div>
+                        src="resources/images/portfolio/revista_chicos/17.webp" alt=""></div>
                   </div>
                   <div class="row">
                     <div class="col-12 modal-structure-image"><img
-                        src="resources/images/portfolio/revista_chicos/Sitio Web 22 06 IMG 1 Inicio 2 Galería 1.webp"
+                        src="resources/images/portfolio/revista_chicos/18.webp"
                         alt=""></div>
                   </div>
                 </div>
