--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
   <!-- Información Meta -->
   <meta name="Description"
   content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
-<meta name="viewport" content="width-device-width, initial-scale=1.0">
+<meta name="viewport" content="initial-scale=1.0">
 <meta name="keywords"
   content="diseño gráfico, ilustración, fanarts, contacto, comunicación, arte gráfico, arte, proyecto, wallpaper, mockups, imágenes, ventas, comisiones, presupuesto, blog, mensaje, email, editoriales">
 
