Ultimas optimizaciones antes de la entrega final

--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Información Meta -->
+  <meta name="author" content="Robertino Cepparo">
   <meta name="Description"
   content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
 <meta name="viewport" content="initial-scale=1.0">
@@ -93,7 +94,7 @@
   </div>
   <!-- fin de menú principal -->
 
-  <div class="formulario-grid-contacto">
+  <main class="formulario-grid-contacto">
     <div class="form-container">
       <form class="formulario" action="https://formsubmit.co/anabellaavena@gmail.com" method="post"
         enctype="text/plain">
@@ -125,7 +126,7 @@
 
     </div>
 
-  </div>
+  </main>
 
   <!-- inicio de footer -->
   <footer class="footer-grid-contacto">
