--- a/tienda.html
+++ b/tienda.html
@@ -14,19 +14,20 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Información Meta -->
+  <meta name="author" content="Robertino Cepparo">
   <meta name="Description"
-  content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
-<meta name="viewport" content="width-device-width, initial-scale=1.0">
-<meta name="keywords"
-  content="diseño gráfico, ilustración, fanarts, comercio, flashcookie, arte gráfico, arte, inprint, redbubble, wallpapers, mockups, imágenes, pósters, ventas, comisiones, tienda, ecommerce, cute, productos gráficos">
+    content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta name="keywords"
+    content="diseño gráfico, ilustración, fanarts, comercio, flashcookie, arte gráfico, arte, inprint, redbubble, wallpapers, mockups, imágenes, pósters, ventas, comisiones, tienda, ecommerce, cute, productos gráficos">
 
-<!-- Protocolo Open Graph -->
-<meta property="og:title" content="Anabella Avena - Tienda">
-<meta property="og:url" content="http://www.anabellaavena.com/tienda">
-<meta property="og:description"
-  content="En esta sección puedes encontrar las tiendas donde promociono mi contenido, comisiones y mucho más.">
+  <!-- Protocolo Open Graph -->
+  <meta property="og:title" content="Anabella Avena - Tienda">
+  <meta property="og:url" content="http://www.anabellaavena.com/tienda">
+  <meta property="og:description"
+    content="En esta sección puedes encontrar las tiendas donde promociono mi contenido, comisiones y mucho más.">
 
-<!-- Título -->
+  <!-- Título -->
   <title>Anabella Avena - Ilustradora Freelance - Tienda</title>
 </head>
 
@@ -93,7 +94,7 @@
   <!-- fin de menú principal -->
 
   <!-- sección tienda -->
-  <section class="productos-grid-tienda">
+  <main class="productos-grid-tienda">
     <nav>
       <ul class="tiendas-links">
         <li>
@@ -111,7 +112,7 @@
         </li>
       </ul>
     </nav>
-  </section>
+  </main>
   <!-- Fin sección tienda -->
 
   <!-- inicio de footer -->
