--- a/about-me.html
+++ b/about-me.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Información Meta -->
+    <meta name="author" content="Robertino Cepparo">
     <meta name="Description"
         content="Sitio web dedicado a publicar mis trabajos de ilustración, promociones y venta de arte gráfico.">
     <meta name="viewport" content="initial-scale=1.0">
